fix: added 5th error and randomize shifting

--- a/src/entities/ContextMenu/style.module.scss
+++ b/src/entities/ContextMenu/style.module.scss
@@ -2,17 +2,18 @@
 	position: absolute;
 	z-index: 200;
 	width: 200px;
-	padding: 5px 0;
+	padding: 3px 3px;
 	list-style-type: none;
-	background-color: var(--console-color);
-	border: 1px solid black;
+	background-color: #EEEEEE;
+	border: 1px solid #A0A0A0;
+	box-shadow: 0 0 10px 0px #A0A0A0;
 }
 
 .menuItem {
-	padding: 5px 15px;
+	padding: 5px 20px;
 
 	&:hover, &:active {
-		background-color: #363636;
+		background-color: #91CAF7;
 	}
 
 	&:focus {
@@ -23,6 +24,8 @@
 .menuButton {
 	margin: 0;
 	padding: 0;
-	color: white;
+	color: black;
 	font-size: 15px;
+	font-weight: 500;
+	letter-spacing: -1px;
 }
