--- a/src/entities/Technology/style.module.scss
+++ b/src/entities/Technology/style.module.scss
@@ -3,8 +3,8 @@
 	justify-content: flex-start;
 	align-items: flex-end;
 	gap: 10px;
-	font-weight: 600;
-	font-size: 14px;
+	font-weight: 700;
+	font-size: 1em;
 	user-select: none;
 
 	img {
