--- a/src/entities/TextContainer/styles.module.scss
+++ b/src/entities/TextContainer/styles.module.scss
@@ -20,4 +20,5 @@
 .content {
 	padding: 15px 15px 0;
 	user-select: text;
+	font-size: 1em;
 }
