--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,8 +1,8 @@
 :root {
 	--accent-color: #b4b4b4;
 	--console-font-family: EpilepsySans, monospace;
-	--console-color: #161616;
-	--console-text: #1c8a1c;
+	--console-color: #080808;
+	--console-text: #2A9616;
 	--layout-width: 90%;
 	--layout-height: 90%;
 	--label-offset: 15px;
